templates/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mydeploy
spec:
  replicas: 6
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: server
        image: myapp:1.2
        imagePullPolicy: Never
        readinessProbe:
          httpGet:
            path: /
            port: 8080
