templates/pod.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: mypod
  labels:
    app: myapp
spec:
  containers:
  - name: server
    image: myapp:latest
    imagePullPolicy: Never
