templates/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: my-app
spec:
  rules:
  - host: myapp.learning.com
    http:
      paths:
      - path: /
        backend:
          serviceName: myservice
          servicePort: 80
